# mill-sime-py

./: .env  .gitignore  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  tasks.py
api-contracts/: cereal.json  farmer.json
src/mill_sime/: config.py  dependencies.py
src/mill_sime/domain/: exceptions.py  use_cases.py
src/mill_sime/domain/models/: farmer.py
src/mill_sime/domain/ports/: farmer_repository.py
src/mill_sime/primary/: main.py
src/mill_sime/primary/routes/: farmer.py
src/mill_sime/primary/routes/requests/: farmer_request.py
src/mill_sime/primary/routes/responses/: farmer.py
src/mill_sime/secondary/: farmer_repository.py  tables.py
src/mill_sime/secondary/alembic/: env.py
src/mill_sime/secondary/alembic/versions/: 1764339233_dc1f45bdb8b4_farmer_creation.py
tests/: conftest.py
tests/fixtures/: db.py  farmer_fixtures.py
tests/primary/routes/: test_farmer.py
tests/secondary/: test_farmer_repository.py
